Fixed alignment of success message after Add to Collection.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -214,6 +214,9 @@ label.major, #content h2 {
 .add_to_collection .collection {
     margin-right:1%;
 }
+.add_to_collection .success {
+  width:100%;
+}
 .add_to_collection input[type=text], .add_to_collection select {
   width:97%;
 }
